--- a/env.example
+++ b/env.example
@@ -6,6 +6,7 @@ POSTGRES_DB=db_name
 
 BOT_TOKEN=4839574812:AAFD39kkdpWt3ywyRZergyOLMaJhac60qc
 ADMIN_TG_ID=1234567891
+ADMIN_USERNAME=Username
 
 TEST_POSTGRES_USER=user_name
 TEST_POSTGRES_PASSWORD=password
